# homeassistant-traefik-integration

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  Makefile  README.md  hacs.json  pyproject.toml  ruff.toml
.claude/skills/spike-findings-homeassistant-traefik-integration/: MANIFEST.md  SKILL.md  run-all.sh
.github/: CODEOWNERS
.github/workflows/: validate.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/phases/01-foundation/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-04-PLAN.md  01-04-SUMMARY.md  (+2 more)
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
.planning/spikes/: CONVENTIONS.md  WRAP-UP-SUMMARY.md
custom_components/traefik/: __init__.py  api.py  binary_sensor.py  button.py  cert_coordinator.py  config_flow.py  const.py  coordinator.py  entity.py  manifest.json  sensor.py  services.yaml  strings.json  tls.py
custom_components/traefik_proxy/: __init__.py  api.py  binary_sensor.py  button.py  cert_coordinator.py  config_flow.py  const.py  coordinator.py  entity.py  manifest.json  sensor.py  services.yaml
scripts/: hassfest_checks.py  pre-commit
tests/: conftest.py  test_api.py  test_binary_sensor.py  test_binary_sensor_tls_expiring.py  test_cert_coordinator.py  test_config_flow.py  test_coordinator.py  test_init.py  test_sensor.py  test_sensor_tls.py  test_tls.py
tests/fixtures/: traefik_entrypoints.json  traefik_middlewares.json  traefik_overview.json  traefik_routers.json  traefik_services.json  traefik_version.json
(+52 files in other folders)
